fix: fix horizontal scroll

--- a/async-race/src/pages/GaragePage.css
+++ b/async-race/src/pages/GaragePage.css
@@ -18,7 +18,7 @@
 }
 
 .garage_page {
-    width: 100vw;
+    min-width: 100%;
     min-height: 100vh;
     padding: 10px;
     display: flex;
